Fix alignment of headers

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -135,7 +135,7 @@ a:visited {
   }
 
   h2, h3 {
-    padding-left: 1em;
+    padding-left: 0em;
   }
 
   input[type=submit] {
